kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lmz
  name: django-service
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
